--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,12 @@
+xdi2-selfhosted (0.8-SNAPSHOT-2) UNRELEASED; urgency=medium
+
+  * Fix debian files.
+
+ -- Markus Sabadello <markus@danubetech.com>  Wed, 23 May 2018 13:26:25 +0200
+
 xdi2-selfhosted (0.8-SNAPSHOT-1) unstable; urgency=medium
 
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Initial release (Closes: #888888)
+  * SovereignID DID/XDI agent
 
- -- Markus Sabadello <markus@danubetech.com>  Mon, 09 Apr 2018 14:24:44 +0200
+ -- Markus Sabadello <markus@danubetech.com>  Mon, 21 May 2018 15:24:44 +0200
