--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 xdi2-selfhosted (0.8-SNAPSHOT-2) UNRELEASED; urgency=medium
 
-  * Fix debian files.
+  * Fix debian control and changelog files.
 
  -- Markus Sabadello <markus@danubetech.com>  Wed, 23 May 2018 13:26:25 +0200
 
